--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,79 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <div class="head">
-           <div class="one"> <p><b>
-                <span class="first-letter">N</span><span class="other-letter">urmohammad</span>
-                <span class="first-letter">S</span><span class="other-letter">harif</span>
-            </b></p> </div>
-            <div class="two" id="mobile_version">
-                <a class="bar-space" style="text-decoration: none;  color:white;">Home</a>
-                <a class="bar-space" style="text-decoration: none;   color:white;">Skills</a>
-                <a class="bar-space" style="text-decoration: none;   color:white;">Projects</a>
-                <a class="bar-space" style="text-decoration: none;   color:white;">About</a>
-                <a class="bar-space" style="text-decoration: none;   color:white;">Resume</a>
-                <a class="bar-space" style="text-decoration: none;   color:white;">Experience</a>
-                <a class="bar-space" style="text-decoration: none;   color:white;">Contact</a>
+    <div class="full">
+    <div class="box"><p>আনিচ চুদির ভাই</p>
+        <audio id="bg-audio" autoplay loop>
+            <source src="ttsMP3.com_VoiceText_2025-4-20_20-7-40.mp3" type="audio/mpeg">
+          </audio>
+    </div>
 
-            </div>
-        </div></div>
-
-<div class="full">
-    <div class="box"><div class="middle_box">In a world that moves at an ever-increasing pace, where technology advances
-         by the minute and information is available at the tap of a screen, it's easy to overlook the quiet, meaningful 
-         moments that bring true fulfillment. The simple joy of sipping a warm cup of coffee on a rainy morning, the
-          comfort of a good book in the soft glow of afternoon light, or the warmth of a familiar voice during an 
-          unexpected call — these are the things that root us in the present and remind us of what matters. Amid the
-           rush to achieve, to build, to succeed, there's a quiet revolution happening in those who choose to slow
-            down, to reconnect with nature, with each other, and with themselves. They are not giving up ambition,
-             but rather redefining it — not as a race to the top, but as a journey of meaning, connection, and purpose.
-              These individuals seek balance over burnout, authenticity over image, and experiences over possessions,
-               carving out lives rich in substance rather than noise. As the world spins faster, they move with 
-               intention, crafting a life that feels as good on the inside as it might look on the outside — and in 
-               doing so, they may be the ones who truly thrive.</div><div class="middle_box">In a world that moves at
-                 an ever-increasing pace, where technology advances by the minute and information is available at the
-                  tap of a screen, it's easy to overlook the quiet, meaningful moments that bring true fulfillment. 
-                  The simple joy of sipping a warm cup of coffee on a rainy morning, the comfort of a good book in
-                   the soft glow of afternoon light, or the warmth of a familiar voice during an unexpected call —
-                    these are the things that root us in the present and remind us of what matters. Amid the rush 
-                    to achieve, to build, to succeed, there's a quiet revolution happening in those who choose to 
-                    slow down, to reconnect with nature, with each other, and with themselves. They are not giving 
-                    up ambition, but rather redefining it — not as a race to the top, but as a journey of meaning,
-                     connection, and purpose. These individuals seek balance over burnout, authenticity over image,
-                      and experiences over possessions, carving out lives rich in substance rather than noise. As 
-                      the world spins faster, they move with intention, crafting a life that feels as good on the 
-                      inside as it might look on the outside — and in doing so, they may be the ones who truly 
-                      thrive.                 the tap of a screen, it's easy to overlook the quiet, meaningful moments that bring true fulfillment
-                      . The simple joy of sipping a warm cup of coffee on a rainy morning, the comfort of a good book in 
-                      the soft glow of afternoon light, or the warmth of a familiar voice during an unexpected call — these
-                       are the things that root us in the present and remind us of what matters. Amid the rush to achieve,
-                        to build, to succeed, there's a quiet revolution happening in those who choose to slow down, to
-                         reconnect with nature, with each other, and with themselves. They are not giving up ambition, 
-                         but rather redefining it — not as a race to the top, but as a journey of meaning, connection,</div></div>
-    <div class="box"><div class="middle_box">In a world that moves at an ever-increasing pace, where technology 
-        advances by the minute and information is available at the tap of a screen, it's easy to overlook the quiet,
-         meaningful moments that bring true fulfillment. The simple joy of sipping a warm cup of coffee on a rainy 
-         morning, the comfort of a good book in the soft glow of afternoon light, or the warmth of a familiar voice
-          during an unexpected call — these are the things that root us in the present and remind us of what matters.
-           Amid the rush to achieve, to build, to succeed, there's a quiet revolution happening in those who choose 
-           to slow down, to reconnect with nature, with each other, and with themselves. They are not giving up
-            ambition, but rather redefining it — not as a race to the top, but as a journey of meaning, connection,
-             and purpose. These individuals seek balance over burnout, authenticity over image, and experiences over 
-             possessions, carving out lives rich in substance rather than noise. As the world spins faster, they move
-              with intention, crafting a life that feels as good on the inside as it might look on the outside — and
-               in doing so, they may be the ones who truly thrive.</div><div class="middle_box">In a world that moves
-                 at an ever-increasing pace, where technology advances by the minute and information is available at 
-                 the tap of a screen, it's easy to overlook the quiet, meaningful moments that bring true fulfillment
-                 . The simple joy of sipping a warm cup of coffee on a rainy morning, the comfort of a good book in 
-                 the soft glow of afternoon light, or the warmth of a familiar voice during an unexpected call — these
-                  are the things that root us in the present and remind us of what matters. Amid the rush to achieve,
-                   to build, to succeed, there's a quiet revolution happening in those who choose to slow down, to
-                    reconnect with nature, with each other, and with themselves. They are not giving up ambition, 
-                    but rather redefining it — not as a race to the top, but as a journey of meaning, connection, 
-                    and purpose. These individuals seek balance over burnout, authenticity over image, and experiences 
-                    over possessions, carving out lives rich in substance rather than noise. As the world spins faster,
-                     they move with intention, crafting a life that feels as good on the inside as it might look on the
-                      outside — and in doing so, they may be the ones who truly thrive.</div></div>
-</div>
+      </div>
 </body>
 </html>
