--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <div class="full">
     <div class="box"><p>আনিচ চুদির ভাই</p>
-        <audio id="bg-audio" autoplay loop>
-            <source src="ttsMP3.com_VoiceText_2025-4-20_20-7-40.mp3" type="audio/mpeg">
-          </audio>
+<audio id="bg-audio" autoplay loop>
+  <source src="https://raw.githubusercontent.com/NurmohammadSharif/Portfolio2/main/ttsMP3.com_VoiceText_2025-4-20_20-7-40.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
     </div>
 
       </div>
