--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="full">
     <div class="box"><p>Hi Anis</p></p>
-<video autoplay loop muted playsinline width="600">
+<video controls width="600">
   <source src="_Milne Hai Mujhse Aayi Aashiqui 2_ Full Video Song _ Aditya Roy Kapur, Shraddha Kapoor.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
