--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="bn">
 <head>
@@ -9,7 +10,7 @@
 <body>
     <div class="full">
     <div class="box"><p>Hi Anis</p></p>
-<video controls width="600">
+<video controls width="200px">
   <source src="e82554b0-84c3-4716-9903-2939bf81c505.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
