--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="full">
     <div class="box"><p>Hi Anis</p></p>
 <video controls width="200px">
-  <source src="e82554b0-84c3-4716-9903-2939bf81c505.mp4" type="video/mp4">
+  <source src="video.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
