--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="full">
     <div class="box"><p>Hi Anis</p></p>
-<video controls width="20rem">
+<video controls width="600px">
   <source src="video.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
