--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="full">
     <div class="box"><p>Hi Anis</p></p>
-<video controls width="300px">
-  <source src="video.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+<audio controls>
+  <source src="audio.mp3" type="Audio/mp3">
+  Your browser does not support the audio tag.
+</audio>
 
 
 
